--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0"/>
+  <meta name="format-detection" content="telephone=no" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>Vite App</title>
 </head>
 <body>
